# ------------------------------------------------------------------------------
# Project : CNLib                                                  /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : 01/01/2026                                            |            |
# Author  : cyclopticnerve                                        |   \____/   |
# License : WTFPLv2                                                \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CNLib"
version = "1.1.1"
description = "A Python library containing useful functions and classes"
authors = [{ name = "cyclopticnerve", email = "cyclopticnerve@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["python", "pyplate", "pymaker", "pybaker"]
dependencies = []
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/cyclopticnerve/CNLib"

[tool.setuptools]
packages = ["cnlib"]

# -)
